--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -60,7 +60,12 @@
                 <ng-container matColumnDef="shippingAddress">
                     <mat-header-cell *matHeaderCellDef>Shipping Address</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element['customerDetails.customeraddress.address'] ? element['customerDetails.customeraddress.address'] : '-'}}
+                        <!-- {{element['customerDetails.customeraddress.address'] ? element['customerDetails.customeraddress.address'] : '-'}} -->
+                        {{element['customerDetails.customeraddress.landMark']}}
+                        {{element['customerDetails.customeraddress.address']}}
+                        {{element['customerDetails.customeraddress.city.name']}}
+                        {{element['customerDetails.customeraddress.state.name']}}
+                        {{element['customerDetails.customeraddress.postalCode']}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="memberId">
