--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -192,10 +192,8 @@
                             <div class=" kt-margin-t-20">
                                 <div class="row">
                                     <div class="col-3 offset-1 p-0">
-                                        <label class="mandatory  font-weight-500 text-color" *ngIf="i == 1">Residential
-                                            or
-                                            Official
-                                            Address</label>
+                                        <label class="mandatory  font-weight-500 text-color" *ngIf="i == 1">Current
+                                            Residential Address</label>
                                         <label class="mandatory  font-weight-500 text-color" *ngIf="i == 0"> Permanent
                                             Address</label>
                                     </div>
@@ -500,7 +498,7 @@
                                                                 class="kt-pointer edit-icon"
                                                                 (click)="editImages(idx, 'residential');"> -->
                                                             <img src="../../../../../assets/media/icons/cancel.svg"
-                                                                alt="" class="kt-pointer remove-icon" 
+                                                                alt="" class="kt-pointer remove-icon"
                                                                 (click)="removeImages(idx, 'residential');">
                                                         </div>
                                                     </div>
